--- a/src/NeoAgi.Tools.FlatFileQuery.csproj
+++ b/src/NeoAgi.Tools.FlatFileQuery.csproj
@@ -19,9 +19,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="27.2.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.*" />
-    <PackageReference Include="NLog" Version="4.*" />
-    <PackageReference Include="NLog.Extensions.Logging" Version="1.*" />
+    <PackageReference Include="NeoAgi.Data.Sql.Sqlite" Version="1.0.0" />
+    <PackageReference Include="NLog" Version="5.0.1" />
+    <PackageReference Include="NLog.Extensions.Logging" Version="5.0.0" />
     <PackageReference Include="NeoAgi" Version="1.*" />
     <PackageReference Include="NeoAgi.CommandLine.Extensions.Configuration" Version="1.*" />
   </ItemGroup>
