--- a/src/NeoAgi.Tools.FlatFileQuery.csproj
+++ b/src/NeoAgi.Tools.FlatFileQuery.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="27.2.1" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.5" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.*" />
     <PackageReference Include="NeoAgi.Data.Sql.Sqlite" Version="1.0.0" />
     <PackageReference Include="NLog" Version="5.0.1" />
